--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Simple SPA</title>
+  <title>Магазин</title>
 </head>
 <body>
   <div id="root"></div>
